# snake

./: CMakeLists.txt
ext/SDL/VisualC-WinRT/: SDL-UWP.vcxproj
ext/SDL/Xcode/XcodeDocSet/: Doxyfile
ext/SDL/acinclude/: libtool.m4
ext/SDL/docs/: README-dynapi.md  README-visualc.md  README-winrt.md  doxyfile
ext/SDL/include/: SDL_hints.h
ext/SDL/src/audio/: SDL_audio.c
ext/SDL/src/dynapi/: SDL_dynapi.h
ext/SDL/src/events/: SDL_events.c
ext/SDL/src/hidapi/doxygen/: Doxyfile
ext/SDL/src/joystick/: SDL_gamecontroller.c
ext/SDL/src/joystick/hidapi/: SDL_hidapi_switch.c
ext/SDL/src/stdlib/: SDL_malloc.c
ext/SDL/src/test/: SDL_test_harness.c
ext/SDL/src/video/: SDL_egl.c  SDL_video.c
ext/SDL/src/video/x11/: SDL_x11messagebox.c  SDL_x11window.c
ext/SDL/test/: relative_mode.markdown
ext/SDL/visualtest/: README.txt
ext/SDL/visualtest/docs/: Doxyfile
ext/SDL/wayland-protocols/: wayland.xml  xdg-shell.xml
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h  window.cpp  window.h
